adicionei os links wpp

--- a/recifut/index.html
+++ b/recifut/index.html
@@ -23,10 +23,10 @@
 
     <main>
         <ul style="padding: 0;">
-            <a href="">
+            <a href="https://api.whatsapp.com/send?phone=5581985238452&text=Ol%C3%A1!%20Gostaria%20de%20saber%20mais%20a%20respeito%20das%20camisas%20de%20time">
                 <li class="vendedor">VENDEDOR 1👕</li>
             </a>
-            <a href="">
+            <a href="https://api.whatsapp.com/send?phone=5581981788908&text=Ol%C3%A1%20me%20interessei%20nas%20camisas%20da%20Recifut!">
                 <li class="vendedor">VENDEDOR 2👕</li>
             </a>
         </ul>
