--- a/base/index.html
+++ b/base/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="shortcut icon" href="img/logo-recifut.jpg" type="image/x-icon">
+    <link rel="shortcut icon" href="" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -20,41 +20,41 @@
     <header>
         <div class="logo">
         </div>
-        <div class="nome">
+        <div class="name">
             @Recifutpe
         </div>
-        <div class="h2">
-            Especialista em coluna e dor. Ajudo você a se livrar dos remédios
+        <div class="subtitle">
+            A loja de camisas de times para todos os gostos e bolsos
         </div>
     </header>
 
     <main>
-        <ul style="padding: 0;">
-            <a href="">
+        <ul id="container">
+            <a class="item-container" href="">
                 <li class="vendedor">OPÇÃO 1</li>
             </a>
-            <a href="">
+            <a class="item-container" href="">
                 <li class="vendedor">OPÇÃO 2</li>
             </a>
-            <a href="">
+            <a class="item-container" href="">
                 <li class="vendedor">OPÇÃO 3</li>
             </a>
-            <a href="">
+            <a class="item-container" href="">
                 <li class="vendedor">OPÇÃO 4</li>
             </a>
         </ul>
     </main>
 
-    <footer id="icone">
-        <a href=""><i class="fa-brands fa-instagram icone"></i></a>
+    <footer>
+        <a href="" class="item-footer"><i class="fa-brands fa-instagram icone"></i></a>
 
-        <a href=""><i class="fa-brands fa-tiktok icone"></i></a>
+        <a href="" class="item-footer"><i class="fa-brands fa-tiktok icone"></i></a>
 
-        <a href=""><i class="fa-brands fa-twitter icone"></i></a>
+        <a href="" class="item-footer"><i class="fa-brands fa-twitter icone"></i></a>
 
-        <a href=""><i class="fa-brands fa-youtube icone"></i></a>
+        <a href="" class="item-footer"><i class="fa-brands fa-youtube icone"></i></a>
 
-        <a href=""><i class="fa-brands fa-facebook icone"></i></a>
+        <a href="" class="item-footer"><i class="fa-brands fa-facebook icone"></i></a>
     </footer>
 </body>
 </html>
